# loltaxx

./: .clang-format  .gitignore  CMakeLists.txt  compile.sh  vcpkg-packages.txt
app/: bitboard.h  color.h  eval.cpp  eval.h  file.h  main.cpp  move.h  perft.cpp  perft_tt.h  piece.h  position.h  rank.h  search.cpp  search.h  square.h  tt.h  uai_option.h  uai_service.h
app/internal/: meta_value_type.h  zobrist.h
test/app/: example.cpp
